--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.5</version>
+		<version>3.0.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.test1</groupId>
-	<artifactId>salaryBackend</artifactId>
+	<groupId>com.salary_tool</groupId>
+	<artifactId>salary_backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>api_test</name>
-	<description>Demo project for Spring Boot</description>
+	<name>salary_backend</name>
+	<description>Salary tool BackEnd</description>
 	<properties>
 		<java.version>20</java.version>
 	</properties>
@@ -34,6 +34,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>5.3.4</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
