--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/salary_test
 spring.datasource.username=postgres
 spring.datasource.password=postgrepw
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
